--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@
                 <button class="nav-btn" onclick="showWeek('week14', this)">November 3 to November 9</button>
                 <button class="nav-btn" onclick="showWeek('week15', this)">November 10 to November 16</button>
                 <button class="nav-btn" onclick="showWeek('week16', this)">November 17 to November 23</button>
+                <button class="nav-btn" onclick="showWeek('summer-break', this)">Summer Break 2025-2026</button>
             </div>
             <div style="text-align: center; margin: 20px 0; padding: 15px; background: rgba(255,255,255,0.9); border-radius: 10px;">
             <div id="today-info" style="font-size: 18px; font-weight: 600; color: #2c3e50; margin-bottom: 10px;"></div>
@@ -2013,113 +2014,95 @@
                     </div>
                 </div>
             </div>
-            <!-- Summer Break Period: Nov 24 onwards -->
-            <div class="week-section" id="summer1">
-                <div class="week-header" style="background: linear-gradient(135deg, #ff9a56, #ff6b6b);">
-                    <div class="week-title">🏖️ Summer Break - Week 1</div>
-                    <div class="week-dates">November 24 - November 30, 2025</div>
-                </div>
+            <!-- Summer Break Week: Nov 24 - Jan 2026 (Third Week) -->
+<div class="week-section" id="summer-break">
+    <div class="week-header" style="background: linear-gradient(135deg, #ff9a56, #ff6b6b);">
+        <div class="week-title">🏖️ Summer Break Period</div>
+        <div class="week-dates">November 24, 2025 - Third Week January 2026</div>
+    </div>
 
-                <div class="week-stats">
-                    <div class="stat-item">
-                        <div class="stat-icon">🏖️</div>
-                        <div class="stat-label">Status</div>
-                        <div class="stat-value">Summer Break</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-icon">✨</div>
-                        <div class="stat-label">Free Days</div>
-                        <div class="stat-value">7 days</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-icon">💼</div>
-                        <div class="stat-label">Availability</div>
-                        <div class="stat-value">100%</div>
-                    </div>
-                </div>
+    <div class="week-stats">
+        <div class="stat-item">
+            <div class="stat-icon">🏖️</div>
+            <div class="stat-label">Status</div>
+            <div class="stat-value">Summer Break</div>
+        </div>
+        <div class="stat-item">
+            <div class="stat-icon">✨</div>
+            <div class="stat-label">Free Days</div>
+            <div class="stat-value">7 days/week</div>
+        </div>
+        <div class="stat-item">
+            <div class="stat-icon">💼</div>
+            <div class="stat-label">Availability</div>
+            <div class="stat-value">100%</div>
+        </div>
+    </div>
 
-                <div class="week-grid">
-                    <div class="day-column">
-                        <div class="day-header">Monday<div class="day-date">Nov 24</div></div>
-                        <div class="day-content">
-                            <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
-                        </div>
-                    </div>
-                    <div class="day-column">
-                        <div class="day-header">Tuesday<div class="day-date">Nov 25</div></div>
-                        <div class="day-content">
-                            <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
-                        </div>
-                    </div>
-                    <div class="day-column">
-                        <div class="day-header">Wednesday<div class="day-date">Nov 26</div></div>
-                        <div class="day-content">
-                            <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
-                        </div>
-                    </div>
-                    <div class="day-column">
-                        <div class="day-header">Thursday<div class="day-date">Nov 27</div></div>
-                        <div class="day-content">
-                            <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
-                        </div>
-                    </div>
-                    <div class="day-column">
-                        <div class="day-header">Friday<div class="day-date">Nov 28</div></div>
-                        <div class="day-content">
-                            <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
-                        </div>
-                    </div>
-                    <div class="day-column">
-                        <div class="day-header">Saturday<div class="day-date">Nov 29</div></div>
-                        <div class="day-content">
-                            <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
-                        </div>
-                    </div>
-                    <div class="day-column">
-                        <div class="day-header">Sunday<div class="day-date">Nov 30</div></div>
-                        <div class="day-content">
-                            <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="week-section" id="summer2">
-                <div class="week-header" style="background: linear-gradient(135deg, #ff9a56, #ff6b6b);">
-                    <div class="week-title">🏖️ Summer Break - Ongoing</div>
-                    <div class="week-dates">December 2025 onwards</div>
-                </div>
-
-                <div class="week-stats">
-                    <div class="stat-item">
-                        <div class="stat-icon">🏖️</div>
-                        <div class="stat-label">Status</div>
-                        <div class="stat-value">Summer Break</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-icon">✨</div>
-                        <div class="stat-label">Duration</div>
-                        <div class="stat-value">Ongoing</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-icon">💼</div>
-                        <div class="stat-label">Availability</div>
-                        <div class="stat-value">100%</div>
-                    </div>
-                </div>
-
-                <div style="text-align: center; padding: 60px 20px; background: linear-gradient(135deg, #ffecd2, #fcb69f); border-radius: 15px; margin: 20px 0;">
-                    <div style="font-size: 4em; margin-bottom: 20px;">🏖️</div>
-                    <h2 style="color: #d63031; margin-bottom: 15px;">Summer Break Period</h2>
-                    <p style="font-size: 1.2em; color: #636e72; margin-bottom: 20px;">Classes have ended for the semester!</p>
-                    <div style="background: white; padding: 20px; border-radius: 10px; display: inline-block; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
-                        <h3 style="color: #00b894; margin-bottom: 10px;">💼 Fully Available for Work</h3>
-                        <p style="color: #2d3436; font-weight: 600;">Available 7 days a week, all day</p>
-                        <p style="color: #636e72; margin-top: 10px;">Perfect time for internships, projects, or full-time opportunities!</p>
-                    </div>
-                </div>
+    <div class="week-grid">
+        <div class="day-column">
+            <div class="day-header">Monday<div class="day-date">All Days</div></div>
+            <div class="day-content">
+                <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
             </div>
         </div>
+        <div class="day-column">
+            <div class="day-header">Tuesday<div class="day-date">All Days</div></div>
+            <div class="day-content">
+                <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
+            </div>
+        </div>
+        <div class="day-column">
+            <div class="day-header">Wednesday<div class="day-date">All Days</div></div>
+            <div class="day-content">
+                <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
+            </div>
+        </div>
+        <div class="day-column">
+            <div class="day-header">Thursday<div class="day-date">All Days</div></div>
+            <div class="day-content">
+                <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
+            </div>
+        </div>
+        <div class="day-column">
+            <div class="day-header">Friday<div class="day-date">All Days</div></div>
+            <div class="day-content">
+                <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
+            </div>
+        </div>
+        <div class="day-column">
+            <div class="day-header">Saturday<div class="day-date">All Days</div></div>
+            <div class="day-content">
+                <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
+            </div>
+        </div>
+        <div class="day-column">
+            <div class="day-header">Sunday<div class="day-date">All Days</div></div>
+            <div class="day-content">
+                <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Additional summer break info -->
+    <div style="text-align: center; padding: 40px 20px; background: linear-gradient(135deg, #ffecd2, #fcb69f); border-radius: 15px; margin: 20px 0;">
+        <div style="font-size: 3em; margin-bottom: 15px;">🏖️</div>
+        <h2 style="color: #d63031; margin-bottom: 10px;">Complete Summer Break</h2>
+        <p style="font-size: 1.1em; color: #636e72; margin-bottom: 15px;">Classes have ended for the semester!</p>
+        <div style="background: white; padding: 20px; border-radius: 10px; display: inline-block; box-shadow: 0 5px 15px rgba(0,0,0,0.1); max-width: 500px;">
+            <h3 style="color: #00b894; margin-bottom: 10px;">💼 Fully Available for Work</h3>
+            <p style="color: #2d3436; font-weight: 600;">Available all 7 days of the week, every day</p>
+            <p style="color: #636e72; margin: 10px 0;">Perfect time for:</p>
+            <ul style="color: #636e72; text-align: left; display: inline-block;">
+                <li>Internships</li>
+                <li>Full-time positions</li>
+                <li>Project work</li>
+                <li>Freelance opportunities</li>
+            </ul>
+            <p style="color: #e17055; margin-top: 15px; font-weight: 600;">School resumes: Third week of January 2026</p>
+        </div>
+    </div>
+</div>
     </div>
 <script>
 function showWeek(weekId, btn) {
