--- a/index.html
+++ b/index.html
@@ -2327,7 +2327,7 @@ document.addEventListener('DOMContentLoaded', function() {
         <div style="margin-bottom: 15px;">
             <img src="github-icon.png" alt="GitHub Logo" style="width: 24px; height: 24px;">
         </div>
-        <h3 style="margin-bottom: 15px; color: #0078d4; font-size: 16px;">GitHub Availability</h3>
+        <h3 style="margin-bottom: 15px; color: #0078d4; font-size: 16px;">My GitHub Page</h3>
         <div id="qrcode-github"></div>
         <a href="https://htayhlaing-win.github.io/availability/" target="_blank">
             <button style="margin-top: 12px; padding: 8px 16px; font-size: 14px; background-color: #0078d4; color: white; border: none; border-radius: 6px; cursor: pointer;">Visit Site</button>
@@ -2369,7 +2369,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 <script>
     // GitHub Availability QR Code
-    var githubURL = "https://htayhlaing-win.github.io/availability/";
+    var githubURL = "https://github.com/HtayHlaing-Win/";
     new QRCode(document.getElementById("qrcode-github"), {
         text: githubURL,
         width: 128,
