--- a/index.html
+++ b/index.html
@@ -2329,7 +2329,7 @@ document.addEventListener('DOMContentLoaded', function() {
         </div>
         <h3 style="margin-bottom: 15px; color: #0078d4; font-size: 16px;">My GitHub Page</h3>
         <div id="qrcode-github"></div>
-        <a href="https://htayhlaing-win.github.io/availability/" target="_blank">
+        <a href="https://github.com/HtayHlaing-Win/" target="_blank">
             <button style="margin-top: 12px; padding: 8px 16px; font-size: 14px; background-color: #0078d4; color: white; border: none; border-radius: 6px; cursor: pointer;">Visit Site</button>
         </a>
     </div>
