--- a/index.html
+++ b/index.html
@@ -2017,8 +2017,8 @@
             <!-- Summer Break Week: Nov 24 - Jan 2026 (Third Week) -->
 <div class="week-section" id="summer-break">
     <div class="week-header" style="background: linear-gradient(135deg, #ff9a56, #ff6b6b);">
-        <div class="week-title">🏖️ Summer Break Period</div>
-        <div class="week-dates">November 24, 2025 - Third Week January 2026</div>
+            <div class="week-title">🏖️ Summer Break Period</div>
+            <div class="week-dates" style="font-weight: 800; font-size: 1.3em; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); border: 2px solid rgba(255, 255, 255, 0.8); padding: 8px 16px; border-radius: 10px; background: rgba(255, 255, 255, 0.1); backdrop-filter: blur(5px);">November 24, 2025 - Third Week January 2026</div>
     </div>
 
     <div class="week-stats">
